--- a/Leccion 2. Titulos, parrafos, links, imagenes y estilos/index.html
+++ b/Leccion 2. Titulos, parrafos, links, imagenes y estilos/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Titulos, parrafos, links y imagenes</title>
+    <title>Titulos, parrafos, links, imagenes y estilos</title>
   </head>
-  <body>
+  <body style="background-color: rgb(173, 248, 223)">
+    <h1
+      style="
+        color: blue;
+        font-size: 50px;
+        font-family: Comic Sans, Comic Sans MS, cursive;
+      "
+    >
+      Universidad HTML
+    </h1>
+
     <h1>Titulo h1</h1>
     <h2>Titulo h2</h2>
     <h3>Titulo h3</h3>
@@ -30,5 +40,14 @@
     <br />
 
     <a href="Pagina1.html">Pagina 1</a>
+
+    <p>Este texto NO se respeta tal cual como se escribe en HTML</p>
+
+    <pre>
+
+      Este texto
+      SI se respeta tal cual como se escribe en HTML aunque se cambie el formato
+
+    </pre>
   </body>
 </html>
