--- a/Leccion 2. Titulos, parrafos, links, imagenes y estilos/index.html
+++ b/Leccion 2. Titulos, parrafos, links, imagenes y estilos/index.html
@@ -17,6 +17,8 @@
       Universidad HTML
     </h1>
 
+    <hr />
+
     <h1>Titulo h1</h1>
     <h2>Titulo h2</h2>
     <h3>Titulo h3</h3>
@@ -39,7 +41,9 @@
 
     <br />
 
-    <a href="Pagina1.html">Pagina 1</a>
+    <a href="Pagina1.html">imagenes</a>
+
+    <a href="Pagina2.html">carateres</a>
 
     <p>Este texto NO se respeta tal cual como se escribe en HTML</p>
 
@@ -49,5 +53,27 @@
       SI se respeta tal cual como se escribe en HTML aunque se cambie el formato
 
     </pre>
+
+    <hr />
+
+    <p><b>Texto en negrita</b> <br /></p>
+
+    <p><strong>Parrafo importante</strong></p>
+
+    <p><i>Parrafo en cursiba</i></p>
+
+    <p><em>Parrafo emfatizado</em></p>
+
+    <p><small>Parrafo pequeño</small></p>
+
+    <p><mark>Parrafo marcado</mark></p>
+
+    <p><del>Parrafo rayado o eliminado</del></p>
+
+    <p><ins>Parrafo subrayado</ins></p>
+
+    <p>Parrafo con <sub>sub</sub>indice. (H<sub>2</sub>O)</p>
+
+    <p>Parrafo con <sup>super</sup>indice. (4<sup>2</sup>)</p>
   </body>
 </html>
