Colores, padding, border y margin

--- a/Leccion 3. Colores en CSS y HTML/index.html
+++ b/Leccion 3. Colores en CSS y HTML/index.html
@@ -7,23 +7,17 @@
     <link rel="stylesheet" href="CSS/estilos.css">
     <title>Universidad HTML</title>
 
-    <!--
+<!--
     <style>
 
         h1{
 
-            color:blue;
-
-        }
-
-        p{
-
-            background-color:rgb(186, 186, 186);
+            color:red;
 
         }
 
     </style>
-    -->
+ -->
     
 
 </head>
