--- a/Leccion 10. Formularios/index.html
+++ b/Leccion 10. Formularios/index.html
@@ -102,6 +102,16 @@
         <br />
         <br />
 
+        <label for="comidas">Comidas Favoritas</label><br />
+        <select id="comidas" name="comidas" multiple="true">
+          <option value="espaguetis">espaguetis</option>
+          <option value="mondongo">mondongo</option>
+          <option value="guisado">guisado</option>
+        </select>
+
+        <br />
+        <br />
+
         <label for="comentario">Comentario:</label>
         <textarea id="comentario" name="comentario" rows="2" cols="30">
 Este es mi comentario</textarea
